user save + tests